LC-833 updates vibrant colors on style guide

--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -40,7 +40,7 @@
 	</li>
 	<li>
 		<span class="sg-label">LightBlue</span>
-		<span class="sg-swatch lrg" style="background: #63C9F7;"></span>
+		<span class="sg-swatch lrg" style="background: #40C4FF;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="pass">o</span>
@@ -55,7 +55,7 @@
 				<span style="color: #FFFFFF;">Dd</span>
 			</div>
 		</div>
-		<span class="sg-label">#63C9F7</span>
+		<span class="sg-label">#40C4FF</span>
 	</li>
 	<li>
 		<span class="sg-label">Megenta</span>
@@ -77,8 +77,8 @@
 		<span class="sg-label">#D9007C</span>
 	</li>
 	<li>
-		<span class="sg-label">RichRed</span>
-		<span class="sg-swatch lrg" style="background: #CC2A14;"></span>
+		<span class="sg-label">Red</span>
+		<span class="sg-swatch lrg" style="background: #CC1414;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -93,11 +93,11 @@
 				<span style="color: #FFFFFF;">Dd</span>
 			</div>
 		</div>
-		<span class="sg-label">#CC2A14</span>
+		<span class="sg-label">#CC1414</span>
 	</li>
 	<li>
 		<span class="sg-label">LightGreen</span>
-		<span class="sg-swatch lrg" style="background: #92CC4E;"></span>
+		<span class="sg-swatch lrg" style="background: #6ECC00;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="pass">o</span>
@@ -112,11 +112,11 @@
 				<span style="color: #FFFFFF;">Dd</span>
 			</div>
 		</div>
-		<span class="sg-label">#92CC4E</span>
+		<span class="sg-label">#6ECC00</span>
 	</li>
 	<li>
 		<span class="sg-label">Yellow</span>
-		<span class="sg-swatch lrg" style="background: #FFEB3B;"></span>
+		<span class="sg-swatch lrg" style="background: #FFE600;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="pass">o</span>
@@ -131,7 +131,7 @@
 				<span style="color: #FFFFFF;">Dd</span>
 			</div>
 		</div>
-		<span class="sg-label">#FFEB3B</span>
+		<span class="sg-label">#FFE600</span>
 	</li>
 </ul>
 <h2>Classic Colors</h2>
