LC-768 clears all camping refrence from filler text

--- a/source/_patterns/03-templates/01-blog.mustache
+++ b/source/_patterns/03-templates/01-blog.mustache
@@ -4,7 +4,7 @@
 		{{> molecules-block-hero-secondary }}
 	{{/ hero}}
 	<div role="main">
-		<h1 class="section-title">Our Outdoor Blog</h1>
+		<h1 class="section-title">Id Porro Laudem Legimus Quo</h1>
 		<div class="l-two-col">
 			<div class="l-main">
 				{{> organisms-latest-posts }}
