Update Color Variable Title

--- a/source/css/scss/generic/_variables.scss
+++ b/source/css/scss/generic/_variables.scss
@@ -10,7 +10,7 @@ $richred: #CC2A14;
 $lightgreen: #92CC4E;
 $yellow: #FFEB3B;
 
-//Business
+//Classic
 $orange: #CC4E10;
 $classicblue: #014982;
 $teal: #00758C;
