--- a/source/css/scss/objects/_lists.scss
+++ b/source/css/scss/objects/_lists.scss
@@ -4,6 +4,13 @@
 	}
 }
 
+.icons.inline-list {
+	li {
+		display: inline-block;
+		margin: 5px;
+	}
+}
+
 /* Social List */
 .social-list {
 	li {
@@ -60,4 +67,26 @@
 	li {
 		margin-bottom: $space;
 	}
+}
+.colorbulletlist {
+	ul {
+		list-style: disc;
+		li {
+			color: $classicblue;
+			font-size: .5em;
+			span {
+				color: $black;
+				font-size: 2em;
+				}
+				li {
+					margin-left: 4em;
+					color: $richgreen;
+					font-size: .5em;
+					span {
+						color: $black;
+						font-size: 2em;
+						}
+					}
+			}
+		}
 }
