--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2238,8 +2238,9 @@ body .wrapper:first-child {
   -moz-border-radius: 10px;
   -o-border-radius: 10px;
   border-radius: 10px;
+  background: rgba(33, 33, 33, 0.5);
 }
-/* line 59, scss/objects/_blocks.scss */
+/* line 60, scss/objects/_blocks.scss */
 .block-hero .b-title {
   text-transform: uppercase;
   color: #fff;
@@ -2247,14 +2248,14 @@ body .wrapper:first-child {
   line-height: 1.25em;
 }
 @media all and (min-width: 720px) {
-  /* line 59, scss/objects/_blocks.scss */
+  /* line 60, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 2.25em;
     line-height: 1.125em;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 59, scss/objects/_blocks.scss */
+  /* line 60, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 3em;
     line-height: 1.05em;
@@ -2262,27 +2263,27 @@ body .wrapper:first-child {
 }
 
 /* Block Thumbnail with Headline */
-/* line 76, scss/objects/_blocks.scss */
+/* line 77, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 81, scss/objects/_blocks.scss */
+/* line 82, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 87, scss/objects/_blocks.scss */
+  /* line 88, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 20%;
     max-width: 10em;
   }
-  /* line 94, scss/objects/_blocks.scss */
+  /* line 95, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -2290,7 +2291,7 @@ body .wrapper:first-child {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 102, scss/objects/_blocks.scss */
+  /* line 103, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -2299,40 +2300,40 @@ body .wrapper:first-child {
 }
 
 /* Block Headline Summary */
-/* line 114, scss/objects/_blocks.scss */
+/* line 115, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 121, scss/objects/_blocks.scss */
+/* line 122, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
   width: 100%;
   max-height: 360px;
 }
-/* line 126, scss/objects/_blocks.scss */
+/* line 127, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 130, scss/objects/_blocks.scss */
+/* line 131, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 137, scss/objects/_blocks.scss */
+/* line 138, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 141, scss/objects/_blocks.scss */
+/* line 142, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 145, scss/objects/_blocks.scss */
+/* line 146, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -2344,12 +2345,12 @@ body .wrapper:first-child {
 }
 
 /* Block Thumb with Summary */
-/* line 158, scss/objects/_blocks.scss */
+/* line 159, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 163, scss/objects/_blocks.scss */
+/* line 164, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
@@ -2360,62 +2361,94 @@ body .wrapper:first-child {
   display: inline-block;
 }
 
+/* line 8, scss/objects/_lists.scss */
+.icons.inline-list li {
+  display: inline-block;
+  margin: 5px;
+}
+
 /* Social List */
-/* line 9, scss/objects/_lists.scss */
+/* line 16, scss/objects/_lists.scss */
 .social-list li {
   margin: 0 0.4rem 1em 0;
 }
-/* line 13, scss/objects/_lists.scss */
+/* line 20, scss/objects/_lists.scss */
 .social-list a {
   font-size: 1.6em;
 }
 
 /* Headline List */
-/* line 20, scss/objects/_lists.scss */
+/* line 27, scss/objects/_lists.scss */
 .headline-list {
   margin-bottom: 1em;
 }
-/* line 23, scss/objects/_lists.scss */
+/* line 30, scss/objects/_lists.scss */
 .headline-list.flush {
   margin: 0;
 }
-/* line 27, scss/objects/_lists.scss */
+/* line 34, scss/objects/_lists.scss */
 .headline-list h4 {
   font-weight: normal;
 }
-/* line 31, scss/objects/_lists.scss */
+/* line 38, scss/objects/_lists.scss */
 .headline-list li {
   padding: 0.25em 0;
   border-top: 1px solid #E0E0E0;
 }
 
 /* Post List */
-/* line 39, scss/objects/_lists.scss */
+/* line 46, scss/objects/_lists.scss */
 .post-list li {
   margin-bottom: 1em;
 }
 
 /* Bullet List */
-/* line 45, scss/objects/_lists.scss */
+/* line 52, scss/objects/_lists.scss */
 .bullet-list {
   list-style: square;
   margin: 0 0 1em 1.2em;
   line-height: 1.3;
 }
-/* line 50, scss/objects/_lists.scss */
+/* line 57, scss/objects/_lists.scss */
 .bullet-list li {
   margin-bottom: 1em;
 }
 
 /* Text List */
-/* line 56, scss/objects/_lists.scss */
+/* line 63, scss/objects/_lists.scss */
 .text-list {
   margin: 0 0 1em;
   line-height: 1.3;
 }
-/* line 60, scss/objects/_lists.scss */
+/* line 67, scss/objects/_lists.scss */
 .text-list li {
   margin-bottom: 1em;
+}
+
+/* line 72, scss/objects/_lists.scss */
+.colorbulletlist ul {
+  list-style: disc;
+}
+/* line 74, scss/objects/_lists.scss */
+.colorbulletlist ul li {
+  color: #014982;
+  font-size: .5em;
+}
+/* line 77, scss/objects/_lists.scss */
+.colorbulletlist ul li span {
+  color: #212121;
+  font-size: 2em;
+}
+/* line 81, scss/objects/_lists.scss */
+.colorbulletlist ul li li {
+  margin-left: 4em;
+  color: #326E1E;
+  font-size: .5em;
+}
+/* line 85, scss/objects/_lists.scss */
+.colorbulletlist ul li li span {
+  color: #212121;
+  font-size: 2em;
 }
 
 /* line 1, scss/objects/_tooltip.scss */
