Update Color Label

--- a/source/_patterns/00-atoms/01-global/01-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/01-colors.mustache
@@ -58,7 +58,7 @@
 		<span class="sg-label">#40C4FF</span>
 	</li>
 	<li>
-		<span class="sg-label">Megenta</span>
+		<span class="sg-label">Magenta</span>
 		<span class="sg-swatch lrg" style="background: #D9007C;"></span>
 		<div class="color-test">
 			<div class="result">
