--- a/source/_patterns/01-molecules/03-media/02-slider-hero.mustache
+++ b/source/_patterns/01-molecules/03-media/02-slider-hero.mustache
@@ -5,16 +5,56 @@
           slideshow: true,
           slideshowSpeed: 7000,
           animationDuration: 600,
-          animation: "slide",
+          animation: "fade",
+          controlNav: false,
+          directionNav: true,
+          useCSS: true,
+          animationLoop: true
+      });
+			$('.flex-overlay').flexslider({
+          slideshow: true,
+          slideshowSpeed: 7000,
+          sync: ".flexslider",
+          animationDuration: 600,
+          animation: "fade",
           controlNav: false,
           directionNav: false,
           useCSS: true,
-          randomize: true,
           animationLoop: true
       });
 		});
 	</script>
-<div class="flexslider"  style="width:100%;border:0;">
+  <div class="block slider-hero">
+  <div class="flex-overlay">
+  <ul class="slides">
+    <li>
+			<div class="b-text" style="">
+				<a href="#"><h2 class="b-title">Submit Your Ideas</h2></a>
+			</div>
+    </li>
+    <li>
+			<div class="b-text">
+				<a href="#"><h2 class="b-title">Submit Your Ideas 2</h2></a>
+			</div>
+    </li>
+    <li>
+			<div class="b-text">
+				<a href="#"><h2 class="b-title">Submit Your Ideas 3</h2></a>
+			</div>
+    </li>
+    <li>
+			<div class="b-text">
+				<a href="#"><h2 class="b-title">Submit Your Ideas 4</h2></a>
+			</div>
+    </li>
+    <li>
+			<div class="b-text">
+				<a href="#"><h2 class="b-title">Submit Your Ideas 5</h2></a>
+			</div>
+    </li>
+  </ul>
+</div>
+<div class="flexslider">
   <ul class="slides">
     <li>
       <img src="../../images/slider/01_Slide.jpg" alt="Slide 1" />
@@ -31,20 +71,6 @@
     <li>
       <img src="../../images/slider/05_Slide.jpg" alt="Slide 5" />
     </li>
-    <li>
-      <img src="../../images/slider/06_Slide.jpg" alt="Slide 6" />
-    </li>
-    <li>
-      <img src="../../images/slider/07_Slide.jpg" alt="Slide 7" />
-    </li>
-    <li>
-      <img src="../../images/slider/08_Slide.jpg" alt="Slide 8" />
-    </li>
-    <li>
-      <img src="../../images/slider/09_Slide.jpg" alt="Slide 9" />
-    </li>
-    <li>
-      <img src="../../images/slider/10_Slide.jpg" alt="Slide 10" />
-    </li>
   </ul>
+</div>
 </div>
