--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2258,8 +2258,37 @@ body .wrapper:first-child {
   line-height: 1.2;
 }
 
+/* Slider Hero Block */
+/* line 26, scss/objects/_blocks.scss */
+.slider-hero .flexslider {
+  width: 100%;
+  border: 0;
+}
+/* line 30, scss/objects/_blocks.scss */
+.slider-hero .flex-overlay {
+  border: 0;
+  position: absolute;
+  text-align: center;
+  top: 10%;
+  width: 100%;
+  z-index: 999;
+}
+/* line 39, scss/objects/_blocks.scss */
+.slider-hero .b-text {
+  background: rgba(33, 33, 33, 0.5);
+  border: 2px solid #fff;
+  border-radius: 10px;
+  margin: 0 auto;
+  padding: 1em;
+  width: 60%;
+}
+/* line 47, scss/objects/_blocks.scss */
+.slider-hero .b-text a {
+  color: #fff;
+}
+
 /* Hero Block */
-/* line 24, scss/objects/_blocks.scss */
+/* line 54, scss/objects/_blocks.scss */
 .block-hero {
   margin-bottom: 0.5em;
   max-height: 700px;
@@ -2267,12 +2296,12 @@ body .wrapper:first-child {
   position: relative;
 }
 @media all and (min-width: 720px) {
-  /* line 24, scss/objects/_blocks.scss */
+  /* line 54, scss/objects/_blocks.scss */
   .block-hero {
     margin-top: 0;
   }
 }
-/* line 32, scss/objects/_blocks.scss */
+/* line 62, scss/objects/_blocks.scss */
 .block-hero .b-thumb img {
   max-width: 1920px;
   display: block;
@@ -2280,7 +2309,7 @@ body .wrapper:first-child {
   margin-left: auto;
   margin-right: auto;
 }
-/* line 43, scss/objects/_blocks.scss */
+/* line 73, scss/objects/_blocks.scss */
 .block-hero .b-text {
   max-width: 1024px;
   position: absolute;
@@ -2300,7 +2329,7 @@ body .wrapper:first-child {
   border-radius: 10px;
   background: rgba(33, 33, 33, 0.5);
 }
-/* line 60, scss/objects/_blocks.scss */
+/* line 90, scss/objects/_blocks.scss */
 .block-hero .b-title {
   text-transform: uppercase;
   color: #fff;
@@ -2308,14 +2337,14 @@ body .wrapper:first-child {
   line-height: 1.25em;
 }
 @media all and (min-width: 720px) {
-  /* line 60, scss/objects/_blocks.scss */
+  /* line 90, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 2.25em;
     line-height: 1.125em;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 60, scss/objects/_blocks.scss */
+  /* line 90, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 3em;
     line-height: 1.05em;
@@ -2323,27 +2352,27 @@ body .wrapper:first-child {
 }
 
 /* Block Thumbnail with Headline */
-/* line 77, scss/objects/_blocks.scss */
+/* line 107, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 82, scss/objects/_blocks.scss */
+/* line 112, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 88, scss/objects/_blocks.scss */
+  /* line 118, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 20%;
     max-width: 10em;
   }
-  /* line 95, scss/objects/_blocks.scss */
+  /* line 125, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -2351,7 +2380,7 @@ body .wrapper:first-child {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 103, scss/objects/_blocks.scss */
+  /* line 133, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -2360,47 +2389,47 @@ body .wrapper:first-child {
 }
 
 /*STYLEGUIDE PATTERNS REMOVE*/
-/* line 113, scss/objects/_blocks.scss */
+/* line 143, scss/objects/_blocks.scss */
 #sg-patterns #molecules-block-inset .b-text {
   max-width: 266px !important;
 }
 
 /*STYLEGUIDE PATTERNS REMOVE END*/
 /* Block Headline Summary */
-/* line 121, scss/objects/_blocks.scss */
+/* line 151, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 128, scss/objects/_blocks.scss */
+/* line 158, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
   width: 100%;
   max-height: 360px;
 }
-/* line 133, scss/objects/_blocks.scss */
+/* line 163, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 137, scss/objects/_blocks.scss */
+/* line 167, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 144, scss/objects/_blocks.scss */
+/* line 174, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 148, scss/objects/_blocks.scss */
+/* line 178, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 152, scss/objects/_blocks.scss */
+/* line 182, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -2412,12 +2441,12 @@ body .wrapper:first-child {
 }
 
 /* Block Thumb with Summary */
-/* line 165, scss/objects/_blocks.scss */
+/* line 195, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 170, scss/objects/_blocks.scss */
+/* line 200, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
