--- a/source/_patterns/01-molecules/03-media/02-slider-hero.mustache
+++ b/source/_patterns/01-molecules/03-media/02-slider-hero.mustache
@@ -1,76 +1,79 @@
 <!-- Slider -->
 	<script type="text/javascript" charset="utf-8">
 		$(window).load(function() {
-			$('.flexslider').flexslider({
+			$('#flex-images').flexslider({
           slideshow: true,
           slideshowSpeed: 7000,
-          animationDuration: 600,
-          animation: "fade",
-          controlNav: false,
-          directionNav: true,
-          useCSS: true,
-          animationLoop: true
-      });
-			$('.flex-overlay').flexslider({
-          slideshow: true,
-          slideshowSpeed: 7000,
-          sync: ".flexslider",
           animationDuration: 600,
           animation: "fade",
           controlNav: false,
           directionNav: false,
           useCSS: true,
-          animationLoop: true
+          animationLoop: false
+      });
+			$('#flex-overlay').flexslider({
+          slideshow: true,
+          slideshowSpeed: 7000,
+          sync: "#flex-images",
+          asNavFor: "#flex-images",
+          animationDuration: 600,
+          animation: "fade",
+          controlNav: false,
+          directionNav: true,
+          useCSS: true,
+          animationLoop: false
       });
 		});
 	</script>
-  <div class="block slider-hero">
-  <div class="flex-overlay">
-  <ul class="slides">
-    <li>
-			<div class="b-text" style="">
-				<a href="#"><h2 class="b-title">Submit Your Ideas</h2></a>
-			</div>
-    </li>
-    <li>
-			<div class="b-text">
-				<a href="#"><h2 class="b-title">Submit Your Ideas 2</h2></a>
-			</div>
-    </li>
-    <li>
-			<div class="b-text">
-				<a href="#"><h2 class="b-title">Submit Your Ideas 3</h2></a>
-			</div>
-    </li>
-    <li>
-			<div class="b-text">
-				<a href="#"><h2 class="b-title">Submit Your Ideas 4</h2></a>
-			</div>
-    </li>
-    <li>
-			<div class="b-text">
-				<a href="#"><h2 class="b-title">Submit Your Ideas 5</h2></a>
-			</div>
-    </li>
-  </ul>
-</div>
-<div class="flexslider">
-  <ul class="slides">
-    <li>
-      <img src="../../images/slider/01_Slide.jpg" alt="Slide 1" />
-    </li>
-    <li>
-      <img src="../../images/slider/02_Slide.jpg" alt="Slide 2" />
-    </li>
-    <li>
-      <img src="../../images/slider/03_Slide.jpg" alt="Slide 3" />
-    </li>
-    <li>
-      <img src="../../images/slider/04_Slide.jpg" alt="Slide 4" />
-    </li>
-    <li>
-      <img src="../../images/slider/05_Slide.jpg" alt="Slide 5" />
-    </li>
-  </ul>
-</div>
+<div class="block slider-hero">
+  <div id="flex-overlay" class="flexslider">
+    <ul class="slides">
+      <li>
+        <div class="b-text">
+          <a href="#"><h2 class="b-title">Submit Your Ideas</h2></a>
+        </div>
+      </li>
+      <li>
+        <div class="b-text">
+          <a href="#"><h2 class="b-title">Submit Your Ideas 2</h2></a>
+        </div>
+      </li>
+      <li>
+        <div class="b-text">
+          <a href="#"><h2 class="b-title">Submit Your Ideas 3</h2></a>
+        </div>
+      </li>
+      <li>
+        <div class="b-text">
+          <a href="#"><h2 class="b-title">Submit Your Ideas 4</h2></a>
+        </div>
+      </li>
+      <li>
+        <div class="b-text">
+          <a href="#"><h2 class="b-title">Submit Your Ideas 5</h2></a>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div id="slider-wrap">
+    <div class="flexslider" id="flex-images">
+      <ul class="slides">
+        <li>
+          <img src="../../images/slider/01_Slide.jpg" alt="Slide 1" />
+        </li>
+        <li>
+          <img src="../../images/slider/02_Slide.jpg" alt="Slide 2" />
+        </li>
+        <li>
+          <img src="../../images/slider/03_Slide.jpg" alt="Slide 3" />
+        </li>
+        <li>
+          <img src="../../images/slider/04_Slide.jpg" alt="Slide 4" />
+        </li>
+        <li>
+          <img src="../../images/slider/05_Slide.jpg" alt="Slide 5" />
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
