--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1121,39 +1121,64 @@ ul.sg-colors li span.lrg {
 }
 
 /* line 95, scss/objects/_header.scss */
+.calendar .header-wrap-background-blur {
+  background-image: url("../images/hero_2nd.jpg");
+}
+
+/* line 98, scss/objects/_header.scss */
+.tweets .header-wrap-background-blur {
+  background-image: url("../images/hero_2nd.jpg");
+}
+
+/* line 101, scss/objects/_header.scss */
+.poll .header-wrap-background-blur {
+  background-image: url("../images/hero_2nd.jpg");
+}
+
+/* line 104, scss/objects/_header.scss */
+.gallery .header-wrap-background-blur {
+  background-image: url("../images/hero_2nd.jpg");
+}
+
+/* line 107, scss/objects/_header.scss */
+.slider-hero .header-wrap-background {
+  opacity: .7;
+}
+
+/* line 110, scss/objects/_header.scss */
 .header {
   display: block;
   max-width: 310px;
 }
 @media all and (min-width: 480px) {
-  /* line 95, scss/objects/_header.scss */
+  /* line 110, scss/objects/_header.scss */
   .header {
     max-width: 100%;
   }
 }
 @media all and (min-width: 720px) {
-  /* line 95, scss/objects/_header.scss */
+  /* line 110, scss/objects/_header.scss */
   .header {
     padding: 0 10px;
     max-width: 1020px;
   }
 }
 
-/* line 108, scss/objects/_header.scss */
+/* line 123, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 5.5em;
   margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
-  /* line 108, scss/objects/_header.scss */
+  /* line 123, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 119, scss/objects/_header.scss */
+/* line 134, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 1.2em 0 0 1em;
@@ -1164,7 +1189,7 @@ ul.sg-colors li span.lrg {
   margin-bottom: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 119, scss/objects/_header.scss */
+  /* line 134, scss/objects/_header.scss */
   .title {
     font-size: 1.1em;
     line-height: 1.25em;
@@ -1174,7 +1199,7 @@ ul.sg-colors li span.lrg {
   }
 }
 @media all and (min-width: 720px) {
-  /* line 119, scss/objects/_header.scss */
+  /* line 134, scss/objects/_header.scss */
   .title {
     font-size: 1.55em;
     line-height: 1.25em;
@@ -1184,7 +1209,7 @@ ul.sg-colors li span.lrg {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 119, scss/objects/_header.scss */
+  /* line 134, scss/objects/_header.scss */
   .title {
     font-size: 2em;
     line-height: 1.25em;
@@ -1194,7 +1219,7 @@ ul.sg-colors li span.lrg {
   }
 }
 
-/* line 150, scss/objects/_header.scss */
+/* line 165, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -1204,20 +1229,20 @@ ul.sg-colors li span.lrg {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 150, scss/objects/_header.scss */
+  /* line 165, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 150, scss/objects/_header.scss */
+  /* line 165, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 168, scss/objects/_header.scss */
+/* line 183, scss/objects/_header.scss */
 .search-form {
   float: right;
   margin: 1em 0;
@@ -1225,14 +1250,14 @@ ul.sg-colors li span.lrg {
 }
 
 /*STYLEGUIDE HEADER REMOVE*/
-/* line 175, scss/objects/_header.scss */
+/* line 190, scss/objects/_header.scss */
 #sg-patterns #organisms-header .header-wrap,
 #sg-patterns #organisms-header .header-wrap-background,
 #sg-patterns #organisms-header .header-wrap-background-blur {
   top: auto;
 }
 
-/* line 180, scss/objects/_header.scss */
+/* line 195, scss/objects/_header.scss */
 #sg-patterns #organisms-header {
   margin-bottom: 120px;
 }
@@ -2264,8 +2289,9 @@ body .wrapper:first-child {
   width: 100%;
   border: 0;
 }
-/* line 30, scss/objects/_blocks.scss */
-.slider-hero .flex-overlay {
+/* line 31, scss/objects/_blocks.scss */
+.slider-hero #flex-overlay {
+  background: none;
   border: 0;
   position: absolute;
   text-align: center;
@@ -2273,7 +2299,7 @@ body .wrapper:first-child {
   width: 100%;
   z-index: 999;
 }
-/* line 39, scss/objects/_blocks.scss */
+/* line 41, scss/objects/_blocks.scss */
 .slider-hero .b-text {
   background: rgba(33, 33, 33, 0.5);
   border: 2px solid #fff;
@@ -2282,13 +2308,13 @@ body .wrapper:first-child {
   padding: 1em;
   width: 60%;
 }
-/* line 47, scss/objects/_blocks.scss */
+/* line 49, scss/objects/_blocks.scss */
 .slider-hero .b-text a {
   color: #fff;
 }
 
 /* Hero Block */
-/* line 54, scss/objects/_blocks.scss */
+/* line 56, scss/objects/_blocks.scss */
 .block-hero {
   margin-bottom: 0.5em;
   max-height: 700px;
@@ -2296,12 +2322,12 @@ body .wrapper:first-child {
   position: relative;
 }
 @media all and (min-width: 720px) {
-  /* line 54, scss/objects/_blocks.scss */
+  /* line 56, scss/objects/_blocks.scss */
   .block-hero {
     margin-top: 0;
   }
 }
-/* line 62, scss/objects/_blocks.scss */
+/* line 64, scss/objects/_blocks.scss */
 .block-hero .b-thumb img {
   max-width: 1920px;
   display: block;
@@ -2309,7 +2335,7 @@ body .wrapper:first-child {
   margin-left: auto;
   margin-right: auto;
 }
-/* line 73, scss/objects/_blocks.scss */
+/* line 75, scss/objects/_blocks.scss */
 .block-hero .b-text {
   max-width: 1024px;
   position: absolute;
@@ -2329,7 +2355,7 @@ body .wrapper:first-child {
   border-radius: 10px;
   background: rgba(33, 33, 33, 0.5);
 }
-/* line 90, scss/objects/_blocks.scss */
+/* line 92, scss/objects/_blocks.scss */
 .block-hero .b-title {
   text-transform: uppercase;
   color: #fff;
@@ -2337,14 +2363,14 @@ body .wrapper:first-child {
   line-height: 1.25em;
 }
 @media all and (min-width: 720px) {
-  /* line 90, scss/objects/_blocks.scss */
+  /* line 92, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 2.25em;
     line-height: 1.125em;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 90, scss/objects/_blocks.scss */
+  /* line 92, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 3em;
     line-height: 1.05em;
@@ -2352,27 +2378,27 @@ body .wrapper:first-child {
 }
 
 /* Block Thumbnail with Headline */
-/* line 107, scss/objects/_blocks.scss */
+/* line 109, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 112, scss/objects/_blocks.scss */
+/* line 114, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 118, scss/objects/_blocks.scss */
+  /* line 120, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 20%;
     max-width: 10em;
   }
-  /* line 125, scss/objects/_blocks.scss */
+  /* line 127, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -2380,7 +2406,7 @@ body .wrapper:first-child {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 133, scss/objects/_blocks.scss */
+  /* line 135, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -2389,47 +2415,47 @@ body .wrapper:first-child {
 }
 
 /*STYLEGUIDE PATTERNS REMOVE*/
-/* line 143, scss/objects/_blocks.scss */
+/* line 145, scss/objects/_blocks.scss */
 #sg-patterns #molecules-block-inset .b-text {
   max-width: 266px !important;
 }
 
 /*STYLEGUIDE PATTERNS REMOVE END*/
 /* Block Headline Summary */
-/* line 151, scss/objects/_blocks.scss */
+/* line 153, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 158, scss/objects/_blocks.scss */
+/* line 160, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
   width: 100%;
   max-height: 360px;
 }
-/* line 163, scss/objects/_blocks.scss */
+/* line 165, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 167, scss/objects/_blocks.scss */
+/* line 169, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 174, scss/objects/_blocks.scss */
+/* line 176, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 178, scss/objects/_blocks.scss */
+/* line 180, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 182, scss/objects/_blocks.scss */
+/* line 184, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -2441,12 +2467,12 @@ body .wrapper:first-child {
 }
 
 /* Block Thumb with Summary */
-/* line 195, scss/objects/_blocks.scss */
+/* line 197, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 200, scss/objects/_blocks.scss */
+/* line 202, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
