Slider Hero adjust

--- a/source/_patterns/01-molecules/03-media/02-slider-hero.mustache
+++ b/source/_patterns/01-molecules/03-media/02-slider-hero.mustache
@@ -9,7 +9,7 @@
           controlNav: false,
           directionNav: false,
           useCSS: true,
-          animationLoop: false
+          animationLoop: true
       });
 			$('#flex-overlay').flexslider({
           slideshow: true,
@@ -20,8 +20,7 @@
           animation: "fade",
           controlNav: false,
           directionNav: true,
-          useCSS: true,
-          animationLoop: false
+          useCSS: true
       });
 		});
 	</script>
@@ -58,7 +57,7 @@
   <div id="slider-wrap">
     <div class="flexslider" id="flex-images">
       <ul class="slides">
-        <li>
+        <li> 
           <img src="../../images/slider/01_Slide.jpg" alt="Slide 1" />
         </li>
         <li>
@@ -75,5 +74,6 @@
         </li>
       </ul>
     </div>
+    <i class="fa fa-2x fa-camera"></i>
   </div>
 </div>
