--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2308,13 +2308,56 @@ body .wrapper:first-child {
   padding: 1em;
   width: 60%;
 }
-/* line 49, scss/objects/_blocks.scss */
+@media all and (max-width: 480px) {
+  /* line 41, scss/objects/_blocks.scss */
+  .slider-hero .b-text {
+    margin-top: -86px;
+  }
+}
+@media all and (max-width: 720px) {
+  /* line 41, scss/objects/_blocks.scss */
+  .slider-hero .b-text {
+    margin-top: -50px;
+  }
+}
+/* line 55, scss/objects/_blocks.scss */
 .slider-hero .b-text a {
   color: #fff;
 }
+/* line 60, scss/objects/_blocks.scss */
+.slider-hero .fa-camera {
+  border-radius: 8px;
+  cursor: pointer;
+  padding: 10px 4px;
+  position: absolute;
+  right: 10px;
+  top: 6.6%;
+  z-index: 280;
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.7);
+}
+@media all and (max-width: 720px) {
+  /* line 60, scss/objects/_blocks.scss */
+  .slider-hero .fa-camera {
+    display: none;
+  }
+}
+/* line 76, scss/objects/_blocks.scss */
+.slider-hero .flex-direction-nav li a,
+.slider-hero .fa-camera {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+@media all and (max-width: 480px) {
+  /* line 76, scss/objects/_blocks.scss */
+  .slider-hero .flex-direction-nav li a,
+  .slider-hero .fa-camera {
+    display: none;
+  }
+}
 
 /* Hero Block */
-/* line 56, scss/objects/_blocks.scss */
+/* line 86, scss/objects/_blocks.scss */
 .block-hero {
   margin-bottom: 0.5em;
   max-height: 700px;
@@ -2322,12 +2365,12 @@ body .wrapper:first-child {
   position: relative;
 }
 @media all and (min-width: 720px) {
-  /* line 56, scss/objects/_blocks.scss */
+  /* line 86, scss/objects/_blocks.scss */
   .block-hero {
     margin-top: 0;
   }
 }
-/* line 64, scss/objects/_blocks.scss */
+/* line 94, scss/objects/_blocks.scss */
 .block-hero .b-thumb img {
   max-width: 1920px;
   display: block;
@@ -2335,7 +2378,7 @@ body .wrapper:first-child {
   margin-left: auto;
   margin-right: auto;
 }
-/* line 75, scss/objects/_blocks.scss */
+/* line 105, scss/objects/_blocks.scss */
 .block-hero .b-text {
   max-width: 1024px;
   position: absolute;
@@ -2355,7 +2398,7 @@ body .wrapper:first-child {
   border-radius: 10px;
   background: rgba(33, 33, 33, 0.5);
 }
-/* line 92, scss/objects/_blocks.scss */
+/* line 122, scss/objects/_blocks.scss */
 .block-hero .b-title {
   text-transform: uppercase;
   color: #fff;
@@ -2363,14 +2406,14 @@ body .wrapper:first-child {
   line-height: 1.25em;
 }
 @media all and (min-width: 720px) {
-  /* line 92, scss/objects/_blocks.scss */
+  /* line 122, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 2.25em;
     line-height: 1.125em;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 92, scss/objects/_blocks.scss */
+  /* line 122, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 3em;
     line-height: 1.05em;
@@ -2378,27 +2421,27 @@ body .wrapper:first-child {
 }
 
 /* Block Thumbnail with Headline */
-/* line 109, scss/objects/_blocks.scss */
+/* line 139, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 114, scss/objects/_blocks.scss */
+/* line 144, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 120, scss/objects/_blocks.scss */
+  /* line 150, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 20%;
     max-width: 10em;
   }
-  /* line 127, scss/objects/_blocks.scss */
+  /* line 157, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -2406,7 +2449,7 @@ body .wrapper:first-child {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 135, scss/objects/_blocks.scss */
+  /* line 165, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -2415,47 +2458,47 @@ body .wrapper:first-child {
 }
 
 /*STYLEGUIDE PATTERNS REMOVE*/
-/* line 145, scss/objects/_blocks.scss */
+/* line 175, scss/objects/_blocks.scss */
 #sg-patterns #molecules-block-inset .b-text {
   max-width: 266px !important;
 }
 
 /*STYLEGUIDE PATTERNS REMOVE END*/
 /* Block Headline Summary */
-/* line 153, scss/objects/_blocks.scss */
+/* line 183, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 160, scss/objects/_blocks.scss */
+/* line 190, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
   width: 100%;
   max-height: 360px;
 }
-/* line 165, scss/objects/_blocks.scss */
+/* line 195, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 169, scss/objects/_blocks.scss */
+/* line 199, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 176, scss/objects/_blocks.scss */
+/* line 206, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 180, scss/objects/_blocks.scss */
+/* line 210, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 184, scss/objects/_blocks.scss */
+/* line 214, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -2467,12 +2510,12 @@ body .wrapper:first-child {
 }
 
 /* Block Thumb with Summary */
-/* line 197, scss/objects/_blocks.scss */
+/* line 227, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 202, scss/objects/_blocks.scss */
+/* line 232, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
