--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1492,11 +1492,11 @@ ul.sg-colors li span.lrg {
 }
 /* line 19, scss/objects/_footer.scss */
 .footer i.fa {
-  padding: 0 12px 0 0;
+  padding: 0 1em 1em 0;
 }
 /* line 23, scss/objects/_footer.scss */
 .footer li {
-  padding: 0 0 16px;
+  padding: 0 0 1em;
 }
 /* line 27, scss/objects/_footer.scss */
 .footer .address-container,
@@ -1508,23 +1508,33 @@ ul.sg-colors li span.lrg {
   padding: 8px 0;
 }
 
-/* line 43, scss/objects/_footer.scss */
-.nav-footer li {
-  border-bottom: 1px solid #474747;
+/* line 40, scss/objects/_footer.scss */
+.nav-footer {
+  border-top: 1px solid #fff;
 }
-@media all and (min-width: 480px) {
-  /* line 43, scss/objects/_footer.scss */
+@media all and (min-width: 720px) {
+  /* line 40, scss/objects/_footer.scss */
+  .nav-footer {
+    border: 0;
+  }
+}
+/* line 46, scss/objects/_footer.scss */
+.nav-footer li {
+  border-bottom: 1px solid #fff;
+}
+@media all and (min-width: 720px) {
+  /* line 46, scss/objects/_footer.scss */
   .nav-footer li {
     border: 0;
   }
 }
-/* line 52, scss/objects/_footer.scss */
+/* line 53, scss/objects/_footer.scss */
 .nav-footer a {
   display: block;
   padding: 0;
 }
 
-/* line 63, scss/objects/_footer.scss */
+/* line 64, scss/objects/_footer.scss */
 .wrapper {
   width: 100%;
   border-collapse: collapse;
@@ -1535,12 +1545,12 @@ ul.sg-colors li span.lrg {
   margin: 4% 0 0;
 }
 
-/* line 72, scss/objects/_footer.scss */
+/* line 73, scss/objects/_footer.scss */
 body .wrapper:first-child {
   margin: 0 auto 0 auto;
 }
 
-/* line 75, scss/objects/_footer.scss */
+/* line 76, scss/objects/_footer.scss */
 .row {
   clear: both;
   max-width: 92%;
@@ -1548,14 +1558,14 @@ body .wrapper:first-child {
   margin: 0 auto;
 }
 
-/* line 81, scss/objects/_footer.scss */
+/* line 82, scss/objects/_footer.scss */
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 86, scss/objects/_footer.scss */
+/* line 87, scss/objects/_footer.scss */
 .col_1, .col_2, .col_3, .col_4, .col_5, .col_6, .col_7, .col_8, .col_9, .col_10, .col_11, .col_12 {
   font-size: 14px;
   float: left;
@@ -1568,7 +1578,7 @@ body .wrapper:first-child {
   margin: 4% 0 0;
 }
 
-/* line 97, scss/objects/_footer.scss */
+/* line 98, scss/objects/_footer.scss */
 .wrapper .row .col_1,
 .wrapper .row .col_2,
 .wrapper .row .col_3,
@@ -1584,7 +1594,7 @@ body .wrapper:first-child {
   padding: 20px;
 }
 
-/* line 111, scss/objects/_footer.scss */
+/* line 112, scss/objects/_footer.scss */
 .no_padding,
 .row.no_padding .col_1,
 .row.no_padding .col_2,
@@ -1601,15 +1611,15 @@ body .wrapper:first-child {
   padding: 0 !important;
 }
 
-@media all and (min-width: 768px) {
-  /* line 128, scss/objects/_footer.scss */
+@media all and (min-width: 720px) {
+  /* line 129, scss/objects/_footer.scss */
   .wrapper {
     width: 100%;
     padding: 1% 0;
     margin: 2% 0 0;
   }
 
-  /* line 133, scss/objects/_footer.scss */
+  /* line 134, scss/objects/_footer.scss */
   .row {
     display: -webkit-box;
     display: -moz-box;
@@ -1623,19 +1633,19 @@ body .wrapper:first-child {
     padding: 2% 0 0;
   }
 
-  /* line 145, scss/objects/_footer.scss */
+  /* line 146, scss/objects/_footer.scss */
   .wrapper .row {
     padding: 1% 0;
   }
 
-  /* line 148, scss/objects/_footer.scss */
+  /* line 149, scss/objects/_footer.scss */
   .row:after {
     content: "";
     display: table;
     clear: both;
   }
 
-  /* line 153, scss/objects/_footer.scss */
+  /* line 154, scss/objects/_footer.scss */
   .col_1, .col_2, .col_3, .col_4, .col_5, .col_6, .col_7, .col_8, .col_9, .col_10, .col_11, .col_12 {
     margin: 0 2% 0 0;
     float: left;
@@ -1643,78 +1653,78 @@ body .wrapper:first-child {
     position: relative;
   }
 
-  /* line 160, scss/objects/_footer.scss */
+  /* line 161, scss/objects/_footer.scss */
   .col_1 {
     width: 6.5%;
   }
 
-  /* line 161, scss/objects/_footer.scss */
+  /* line 162, scss/objects/_footer.scss */
   .col_2 {
     width: 15%;
   }
 
-  /* line 162, scss/objects/_footer.scss */
+  /* line 163, scss/objects/_footer.scss */
   .col_3 {
     width: 23.5%;
   }
 
-  /* line 163, scss/objects/_footer.scss */
+  /* line 164, scss/objects/_footer.scss */
   .col_4 {
     width: 32%;
   }
 
-  /* line 164, scss/objects/_footer.scss */
+  /* line 165, scss/objects/_footer.scss */
   .col_5 {
     width: 40.5%;
   }
 
-  /* line 165, scss/objects/_footer.scss */
+  /* line 166, scss/objects/_footer.scss */
   .col_6 {
     width: 49%;
   }
 
-  /* line 166, scss/objects/_footer.scss */
+  /* line 167, scss/objects/_footer.scss */
   .col_7 {
     width: 57.5%;
   }
 
-  /* line 167, scss/objects/_footer.scss */
+  /* line 168, scss/objects/_footer.scss */
   .col_8 {
     width: 66%;
   }
 
-  /* line 168, scss/objects/_footer.scss */
+  /* line 169, scss/objects/_footer.scss */
   .col_9 {
     width: 74.5%;
   }
 
-  /* line 169, scss/objects/_footer.scss */
+  /* line 170, scss/objects/_footer.scss */
   .col_10 {
     width: 83%;
   }
 
-  /* line 170, scss/objects/_footer.scss */
+  /* line 171, scss/objects/_footer.scss */
   .col_11 {
     width: 91.5%;
   }
 
-  /* line 171, scss/objects/_footer.scss */
+  /* line 172, scss/objects/_footer.scss */
   .col_12 {
     width: 100%;
     margin: 0;
   }
 
-  /* line 173, scss/objects/_footer.scss */
+  /* line 174, scss/objects/_footer.scss */
   .last {
     margin: 0;
   }
 }
-/* line 181, scss/objects/_footer.scss */
+/* line 182, scss/objects/_footer.scss */
 .flexGRID {
   background: #212121;
 }
 
-/* line 184, scss/objects/_footer.scss */
+/* line 185, scss/objects/_footer.scss */
 .flexGRID .row .col_1,
 .flexGRID .row .col_2,
 .flexGRID .row .col_3,
@@ -1731,14 +1741,14 @@ body .wrapper:first-child {
   border-radius: 5px;
 }
 
-/* line 199, scss/objects/_footer.scss */
+/* line 200, scss/objects/_footer.scss */
 .flexGRID .row:first-child .col_12 {
   color: #FFF;
   background: none;
   padding: 0;
 }
 
-/* line 204, scss/objects/_footer.scss */
+/* line 205, scss/objects/_footer.scss */
 .flexGRID .row:first-child .col_12 h1 {
   font-size: 32px;
   margin-bottom: 2%;
@@ -1746,7 +1756,7 @@ body .wrapper:first-child {
 }
 
 /*STYLEGUIDE FOOTER REMOVE*/
-/* line 211, scss/objects/_footer.scss */
+/* line 212, scss/objects/_footer.scss */
 #organisms-footer .footer {
   margin-bottom: 0;
 }
