LC-837 create new break point var for footer

--- a/source/css/scss/generic/_variables.scss
+++ b/source/css/scss/generic/_variables.scss
@@ -75,6 +75,7 @@ $bp-small-2 : 29.75em;
 $bp-small-3 : 39.8em;
 $bp-med : 480px; //Tablet
 $bp-med-2 : 720px; //Tablet Wide
+$bp-med-3 : 830px; 
 $bp-large : 960px; //Desktop
 $bp-large-2 : 1280px; //Desktop Wide
 $bp-xl : 73em;
