LC-837 sets footer nav border 100% width

--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -14,11 +14,11 @@
                 </ul>
             </div>
             <div class="col_4">
-			{{> molecules-footer-nav }}
-            </div>
-            <div class="col_4 last">
 			<p class="copyright">&copy; 2015. All rights reserved.<br />Disclaimer | Privacy Policy</p>
             </div>
+            <div class="col_4 last no_padding">
+      {{> molecules-footer-nav }}
+			      </div>
         </div>
     </div>
 </footer>
