--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1491,50 +1491,60 @@ ul.sg-colors li span.lrg {
   color: #fff;
 }
 /* line 19, scss/objects/_footer.scss */
+.footer .full {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+/* line 25, scss/objects/_footer.scss */
 .footer i.fa {
   padding: 0 1em 1em 0;
 }
-/* line 23, scss/objects/_footer.scss */
+/* line 29, scss/objects/_footer.scss */
 .footer li {
   padding: 0 0 1em;
 }
-/* line 27, scss/objects/_footer.scss */
+/* line 33, scss/objects/_footer.scss */
 .footer .address-container,
 .footer .email {
   padding-bottom: 0;
 }
-/* line 32, scss/objects/_footer.scss */
+/* line 38, scss/objects/_footer.scss */
 .footer .nav-footer li {
   padding: 8px 0;
 }
-
 /* line 40, scss/objects/_footer.scss */
+.footer .nav-footer li a {
+  margin-left: 40px;
+}
+
+/* line 49, scss/objects/_footer.scss */
 .nav-footer {
   border-top: 1px solid #fff;
 }
 @media all and (min-width: 830px) {
-  /* line 40, scss/objects/_footer.scss */
+  /* line 49, scss/objects/_footer.scss */
   .nav-footer {
     border: 0;
   }
 }
-/* line 46, scss/objects/_footer.scss */
+/* line 55, scss/objects/_footer.scss */
 .nav-footer li {
   border-bottom: 1px solid #fff;
 }
 @media all and (min-width: 830px) {
-  /* line 46, scss/objects/_footer.scss */
+  /* line 55, scss/objects/_footer.scss */
   .nav-footer li {
     border: 0;
   }
 }
-/* line 53, scss/objects/_footer.scss */
+/* line 62, scss/objects/_footer.scss */
 .nav-footer a {
   display: block;
   padding: 0;
 }
 
-/* line 64, scss/objects/_footer.scss */
+/* line 74, scss/objects/_footer.scss */
 .wrapper {
   width: 100%;
   border-collapse: collapse;
@@ -1545,27 +1555,27 @@ ul.sg-colors li span.lrg {
   margin: 4% 0 0;
 }
 
-/* line 73, scss/objects/_footer.scss */
+/* line 83, scss/objects/_footer.scss */
 body .wrapper:first-child {
   margin: 0 auto 0 auto;
 }
 
-/* line 76, scss/objects/_footer.scss */
+/* line 86, scss/objects/_footer.scss */
 .row {
   clear: both;
-  max-width: 92%;
+  max-width: 100%;
   height: 100%;
   margin: 0 auto;
 }
 
-/* line 82, scss/objects/_footer.scss */
+/* line 92, scss/objects/_footer.scss */
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 87, scss/objects/_footer.scss */
+/* line 97, scss/objects/_footer.scss */
 .col_1, .col_2, .col_3, .col_4, .col_5, .col_6, .col_7, .col_8, .col_9, .col_10, .col_11, .col_12 {
   font-size: 14px;
   float: left;
@@ -1578,7 +1588,7 @@ body .wrapper:first-child {
   margin: 4% 0 0;
 }
 
-/* line 98, scss/objects/_footer.scss */
+/* line 111, scss/objects/_footer.scss */
 .wrapper .row .col_1,
 .wrapper .row .col_2,
 .wrapper .row .col_3,
@@ -1591,10 +1601,10 @@ body .wrapper:first-child {
 .wrapper .row .col_10,
 .wrapper .row .col_11,
 .wrapper .row .col_12 {
-  padding: 20px;
+  padding: 20px 40px;
 }
 
-/* line 112, scss/objects/_footer.scss */
+/* line 125, scss/objects/_footer.scss */
 .no_padding,
 .row.no_padding .col_1,
 .row.no_padding .col_2,
@@ -1612,14 +1622,14 @@ body .wrapper:first-child {
 }
 
 @media all and (min-width: 830px) {
-  /* line 129, scss/objects/_footer.scss */
+  /* line 144, scss/objects/_footer.scss */
   .wrapper {
     width: 100%;
     padding: 1% 0;
     margin: 2% 0 0;
   }
 
-  /* line 134, scss/objects/_footer.scss */
+  /* line 149, scss/objects/_footer.scss */
   .row {
     display: -webkit-box;
     display: -moz-box;
@@ -1633,19 +1643,19 @@ body .wrapper:first-child {
     padding: 2% 0 0;
   }
 
-  /* line 146, scss/objects/_footer.scss */
+  /* line 161, scss/objects/_footer.scss */
   .wrapper .row {
     padding: 1% 0;
   }
 
-  /* line 149, scss/objects/_footer.scss */
+  /* line 164, scss/objects/_footer.scss */
   .row:after {
     content: "";
     display: table;
     clear: both;
   }
 
-  /* line 154, scss/objects/_footer.scss */
+  /* line 169, scss/objects/_footer.scss */
   .col_1, .col_2, .col_3, .col_4, .col_5, .col_6, .col_7, .col_8, .col_9, .col_10, .col_11, .col_12 {
     margin: 0 2% 0 0;
     float: left;
@@ -1653,78 +1663,94 @@ body .wrapper:first-child {
     position: relative;
   }
 
-  /* line 161, scss/objects/_footer.scss */
+  /* line 176, scss/objects/_footer.scss */
+  .wrapper .row .col_1,
+  .wrapper .row .col_2,
+  .wrapper .row .col_3,
+  .wrapper .row .col_4,
+  .wrapper .row .col_5,
+  .wrapper .row .col_6,
+  .wrapper .row .col_7,
+  .wrapper .row .col_8,
+  .wrapper .row .col_9,
+  .wrapper .row .col_10,
+  .wrapper .row .col_11,
+  .wrapper .row .col_12 {
+    padding: 20px;
+  }
+
+  /* line 191, scss/objects/_footer.scss */
   .col_1 {
     width: 6.5%;
   }
 
-  /* line 162, scss/objects/_footer.scss */
+  /* line 192, scss/objects/_footer.scss */
   .col_2 {
     width: 15%;
   }
 
-  /* line 163, scss/objects/_footer.scss */
+  /* line 193, scss/objects/_footer.scss */
   .col_3 {
     width: 23.5%;
   }
 
-  /* line 164, scss/objects/_footer.scss */
+  /* line 194, scss/objects/_footer.scss */
   .col_4 {
     width: 32%;
   }
 
-  /* line 165, scss/objects/_footer.scss */
+  /* line 195, scss/objects/_footer.scss */
   .col_5 {
     width: 40.5%;
   }
 
-  /* line 166, scss/objects/_footer.scss */
+  /* line 196, scss/objects/_footer.scss */
   .col_6 {
     width: 49%;
   }
 
-  /* line 167, scss/objects/_footer.scss */
+  /* line 197, scss/objects/_footer.scss */
   .col_7 {
     width: 57.5%;
   }
 
-  /* line 168, scss/objects/_footer.scss */
+  /* line 198, scss/objects/_footer.scss */
   .col_8 {
     width: 66%;
   }
 
-  /* line 169, scss/objects/_footer.scss */
+  /* line 199, scss/objects/_footer.scss */
   .col_9 {
     width: 74.5%;
   }
 
-  /* line 170, scss/objects/_footer.scss */
+  /* line 200, scss/objects/_footer.scss */
   .col_10 {
     width: 83%;
   }
 
-  /* line 171, scss/objects/_footer.scss */
+  /* line 201, scss/objects/_footer.scss */
   .col_11 {
     width: 91.5%;
   }
 
-  /* line 172, scss/objects/_footer.scss */
+  /* line 202, scss/objects/_footer.scss */
   .col_12 {
     width: 100%;
     margin: 0;
   }
 
-  /* line 174, scss/objects/_footer.scss */
+  /* line 204, scss/objects/_footer.scss */
   .last {
     margin: 0;
   }
 }
-/* line 182, scss/objects/_footer.scss */
+/* line 212, scss/objects/_footer.scss */
 .flexGRID {
   background: #212121;
 }
 
-/* line 185, scss/objects/_footer.scss */
+/* line 215, scss/objects/_footer.scss */
 .flexGRID .row .col_1,
 .flexGRID .row .col_2,
 .flexGRID .row .col_3,
@@ -1741,27 +1767,27 @@ body .wrapper:first-child {
   border-radius: 5px;
 }
 
-/* line 200, scss/objects/_footer.scss */
+/* line 230, scss/objects/_footer.scss */
 .flexGRID .row:first-child .col_12 {
   color: #FFF;
   background: none;
   padding: 0;
 }
 
-/* line 205, scss/objects/_footer.scss */
+/* line 235, scss/objects/_footer.scss */
 .flexGRID .row:first-child .col_12 h1 {
   font-size: 32px;
   margin-bottom: 2%;
   text-align: center;
 }
 
-/*STYLEGUIDE FOOTER REMOVE*/
-/* line 212, scss/objects/_footer.scss */
+/* STYLEGUIDE FOOTER REMOVE */
+/* line 242, scss/objects/_footer.scss */
 #organisms-footer .footer {
   margin-bottom: 0;
 }
 
-/*END STYLEGUIDE FOOTER REMOVE*/
+/* END STYLEGUIDE FOOTER REMOVE */
 /*------------------------------------*\
     $TEXT Styles
 \*------------------------------------*/
