LC-837 set padding for footer nav at desktop res

--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -16,7 +16,7 @@
             <div class="col_4">
 			<p class="copyright">&copy; 2015. All rights reserved.<br />Disclaimer | Privacy Policy</p>
             </div>
-            <div class="col_4 last no_padding">
+            <div class="col_4 last">
       {{> molecules-footer-nav }}
 			      </div>
         </div>
