--- a/source/_patterns/03-templates/08-log-in.mustache
+++ b/source/_patterns/03-templates/08-log-in.mustache
@@ -4,7 +4,7 @@
 	{{> molecules-alert:error }}
 	{{/ emergency }}
 	{{# hero }}
-	{{> molecules-block-hero }}
+	{{> molecules-block-hero-log-in }}
 	{{/ hero}}
 	{{> organisms-footer }}	
 </div><!--End #page.page-->
