LC-1004 generates log in form markup

--- a/source/_patterns/01-molecules/02-blocks/04-block-hero-log-in.mustache
+++ b/source/_patterns/01-molecules/02-blocks/04-block-hero-log-in.mustache
@@ -4,7 +4,7 @@
 			{{> atoms-landscape-16x9 }} 
 		</div>
 		<div class="b-text">
-			<h2 class="b-title">LOGIN</h2>
+			{{> molecules-log-in }}
 		</div>
 	</a>
 </div>
