LC-1004 applies style and responsive behavor to log in form

--- a/source/_patterns/01-molecules/02-blocks/04-block-hero-log-in.mustache
+++ b/source/_patterns/01-molecules/02-blocks/04-block-hero-log-in.mustache
@@ -1,4 +1,4 @@
-<div class="block block-hero">
+<div class="block block-hero block-log-in">
 	<a href="{{ url }}" class="b-inner">
 		<div class="b-thumb">
 			{{> atoms-landscape-16x9 }} 
