--- a/source/_patterns/01-molecules/04-forms/03-log-in.mustache
+++ b/source/_patterns/01-molecules/04-forms/03-log-in.mustache
@@ -1,8 +1,8 @@
 <form action="{{ url }}" method="post" class="inline-form log-in-form">  
     <fieldset>
 	    <div class="inline-container">
-	   		<input type="text" placeholder="Username" id="username-field" class="username-field" />
-	   		<input type="password" placeholder="Password" id="password-field" class="password-field" />
+	   		<input type="text" placeholder="&#xf007;  Username" id="username-field" class="username-field" />
+	   		<input type="password" placeholder="&#xf023;  Password" id="password-field" class="password-field" />
 	    	<button class="btn log-in-submit">Log In</button>
 		</div>
     </fieldset>
