--- a/source/css/scss/base/_forms.scss
+++ b/source/css/scss/base/_forms.scss
@@ -135,3 +135,15 @@ input[type="search"]::-webkit-search-decoration {
 
 	}
 }
+
+/* Log In Form */
+.log-in-form {
+	.username-field, .password-field {
+		font-family: FontAwesome, $font;
+		margin-bottom: 16px;
+	}
+	.btn.log-in-submit {
+		width: 100%;
+		padding: 0.9em;
+	}
+}
