LC-1004 genrates log in disclaimer slab, markup and style

--- a/source/_patterns/03-templates/08-log-in.mustache
+++ b/source/_patterns/03-templates/08-log-in.mustache
@@ -6,5 +6,6 @@
 	{{# hero }}
 	{{> molecules-block-hero-log-in }}
 	{{/ hero}}
+	{{> molecules-disclaimer-slab }}
 	{{> organisms-footer }}	
 </div><!--End #page.page-->
